# Shadow-mapping-with-imgui

./: .gitignore  CMakeLists.txt  README.md
enc_temp_folder/cdf84ac4c9a9cd65f3073fd36543ce/: imgui_demo.cpp
multiple_imgui_windows/: CMakeLists.txt
multiple_imgui_windows/resources/shaders/: lightcube.frag.glsl  multisample_to_texture_2d.frag.glsl  multisample_to_texture_2d.vert.glsl
multiple_imgui_windows/sources/actor/: CMakeLists.txt  actor.cpp  actor.h
multiple_imgui_windows/sources/framebuffer/: framebuffer.cpp
multiple_imgui_windows/sources/light/: light.cpp  light.h
multiple_imgui_windows/sources/object/: object.cpp
multiple_imgui_windows/sources/object_loader/: CMakeLists.txt  object_loader.h
multiple_imgui_windows/sources/primitives/: primitives.h
multiple_imgui_windows/sources/shader/: CMakeLists.txt  shader.h
multiple_imgui_windows/sources/texture/: CMakeLists.txt  texture.cpp  texture.h
multiple_imgui_windows/sources/uniform_buffer/: CMakeLists.txt  uniform_buffer.h
multiple_imgui_windows/sources/vertex_buffer/: CMakeLists.txt
multiple_imgui_windows/src/: main.cpp
resources/models/: badyl.mtl  gizmo.mtl
resources/shaders/: cubemap.frag.glsl  cubemap.vert.glsl  fragment.frag.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  gbuffer_cubemap.frag.glsl  gbuffer_cubemap.vert.glsl  gbuffer_lightcube.frag.glsl  gbuffer_lighting_pass.frag.glsl  gbuffer_lighting_pass.vert.glsl  lightcube.frag.glsl  lightcube.vert.glsl  multisample_to_texture_2d.frag.glsl  multisample_to_texture_2d.vert.glsl  shadowmap.frag.glsl  shadowmap.vert.glsl  vertex.vert.glsl
sources/camera/: CMakeLists.txt  camera.cpp  camera.h
sources/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
sources/index_buffer/: CMakeLists.txt  index_buffer.cpp  index_buffer.h
sources/light/: CMakeLists.txt  light.cpp  light.h
sources/object/: CMakeLists.txt  object.cpp  object.h
sources/object_loader/: CMakeLists.txt  object_loader.cpp  object_loader.h
sources/primitives/: primitives.h
sources/renderbuffer/: CMakeLists.txt  renderbuffer.cpp  renderbuffer.h
sources/shader/: CMakeLists.txt  shader.cpp  shader.h
sources/texture/: CMakeLists.txt  texture.cpp  texture.h
sources/uniform_buffer/: uniform_buffer.cpp
sources/vertex_array/: CMakeLists.txt  vertex_array.cpp  vertex_array.h
sources/vertex_buffer/: CMakeLists.txt  vertex_buffer.cpp  vertex_buffer.h
src/: main.cpp  render_imgui.cpp
